# script-gen

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
adapters/: anthropic_llm.py  jsonl_session_store.py
app/: parser.py  prompts.py  script_agent.py
bootstrap/: container.py
cli/: main.py
domain/: models.py
ports/: llm.py  session_store.py
